cart and list-product
cart and list-product file html css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="w-[1480px] px-5 my-0 mx-auto font-roboto">
-      <header class="w-full">
+      <header class="w-full pt-5">
         <nav class="w-full h-20 grid grid-cols-[15%_70%_auto]">
           <div class="w-full">
             <div class="w-full h-full relative">
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="w-full flex px-4 justify-center gap-x-10 items-center">
-            <div class="text-lg font-semibold">Iphone</div>
+            <div class="text-lg font-semibold rounded-lg p-2.5 hover:bg-black hover:rounded-lg hover:text-white duration-300 cursor-pointer">Iphone</div>
             <div class="text-lg font-semibold">Mac</div>
             <div class="text-lg font-semibold">Ipad</div>
             <div class="text-lg font-semibold">Watch</div>
@@ -86,22 +86,28 @@
               <div class="py-5 px-5 shadow-sm shadow-black rounded-md">
                 <img src="view/img/mac.png" alt="" />
                 <p class="mt-8 text-[20px]">Mac: Khám phá dòng sản phẩm</p>
-                <button
-                  class="mt-8 rounded-full bg-black text-white py-2.5 px-6 text-base"
-                >
-                  <a href="">Xem Ngay</a>
-                </button>
+                <a
+                  href=""
+                  class="w-fit flex items-center mt-8 rounded-full bg-black font-semibold text-white py-2.5 px-6 text-lg transition duration-300 group hover:shadow-mysd hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0"
+                  ><span href="">Xem Ngay</span>
+                  <span class="ml-2 group-hover:-rotate-45 duration-500"
+                    ><i class="bx bx-md bx-right-arrow-alt"></i
+                  ></span>
+                </a>
               </div>
 
               <!-- ipad -->
               <div class="py-5 px-5 shadow-sm shadow-black rounded-md">
                 <img src="view/img/ipad.png" alt="" />
                 <p class="mt-8 text-[20px]">iPad nào phù hợp với bạn?</p>
-                <button
-                  class="mt-8 rounded-full bg-black text-white py-2.5 px-6 text-base"
-                >
-                  <a href="">Xem Ngay</a>
-                </button>
+                <a
+                  href=""
+                  class="w-fit flex items-center mt-8 rounded-full bg-black font-semibold text-white py-2.5 px-6 text-lg transition duration-300 group hover:shadow-mysd hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0"
+                  ><span href="">Xem Ngay</span>
+                  <span class="ml-2 group-hover:-rotate-45 duration-500"
+                    ><i class="bx bx-md bx-right-arrow-alt"></i
+                  ></span>
+                </a>
               </div>
               <!-- watch -->
               <div class="py-5 px-5 shadow-sm shadow-black rounded-md">
