--- a/index.html
+++ b/index.html
@@ -130,18 +130,14 @@
         <section class="w-full h-auto py-10">
           <div class="flex justify-between items-center">
             <h3 class="font-bold text-2xl">Sản phẩm nổi bật</h3>
-            <div class="flex gap-5">
-              <button
-                class="rounded-full h-12 w-12 bg-gray-200 border border-black"
-              >
-                <i class="bx bx-md bxs-chevron-left"></i>
-              </button>
-              <button
-                class="rounded-full h-12 w-12 bg-gray-200 border border-black"
-              >
-                <i class="bx bx-md bxs-chevron-right"></i>
-              </button>
-            </div>
+            <a
+            href=""
+            class="w-fit flex items-center mt-8 rounded-full bg-black font-semibold text-white px-5 py-2.5  text-lg transition duration-300 group hover:shadow-mysd hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0"
+            ><span href="">Xem tất cả</span>
+            <span class="ml-2 group-hover:-rotate-45 duration-500"
+              ><i class="bx bx-md bx-right-arrow-alt"></i
+            ></span>
+          </a>
           </div>
 
           <div class="w-full flex justify-between mt-8">
