--- a/header cua Khang/header.html
+++ b/header cua Khang/header.html
@@ -20,7 +20,7 @@
           </div>
         </div>
     </div>
-    <nav  class="flex items-center justify-between relative">
+    <!-- <nav  class="flex items-center justify-between relative">
           <a href="#" class="nav-logo-wrapper block">
             <img src="../src/img/logochu.png" alt="" class="nav-logo block">
           </a>
@@ -85,7 +85,7 @@
                 </div>
               </div>
           </div>
-    </nav>
+    </nav> -->
     </div>
   </div>
   <style> 
@@ -133,7 +133,7 @@ transition: all 80ms ease-in;
                       <div class="swiper-slide">
                               <div class="banner-img-wrapper">
                                     <picture>
-                                          <img src="/src/img/11.11sale.webp" alt="Banner">
+                                          <img src="../view/img/f1.png" alt="Banner">
                                     </picture>
                                     <a href="#" class="banner-img-link"></a>
                               </div>
